pequeños progresos seccion B

--- a/notebooks/Main_B.ipynb
+++ b/notebooks/Main_B.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 84,
    "id": "80db1157",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 85,
    "id": "a59ec020",
    "metadata": {},
    "outputs": [],
@@ -110,15 +110,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 86,
    "id": "4ea124a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "archivo_clean_path = DATA_CLEAN_PATH / \"usu_clean_individual.csv\"\n",
     "\n",
-    "f = archivo_clean_path.open(\"r\",encoding=\"utf-8\") \n",
-    "reader = csv.reader(f,delimiter=\";\")\n",
+    "i = archivo_clean_path.open(\"r\",encoding=\"utf-8\") \n",
+    "reader = csv.reader(i,delimiter=\";\")\n",
     "header = next(reader)\n",
     "new_list = []\n",
     "for elem in reader:\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 87,
    "id": "ac15ca5e",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 88,
    "id": "7e2c6e15",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 89,
    "id": "1d81e323",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "el porcentaje de personas extranjeras universitarias es: 0.53\n"
+      "Valores no encontrados en el diccionario\n"
      ]
     }
    ],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 90,
    "id": "e63c22ae",
    "metadata": {},
    "outputs": [],
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "3e646b09",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 92,
    "id": "534e0dd8",
    "metadata": {},
    "outputs": [],
@@ -382,15 +382,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "f7ee5a89",
    "metadata": {},
    "outputs": [],
    "source": [
     "archivo_clean_path = DATA_CLEAN_PATH / \"usu_clean_hogar.csv\"\n",
     "\n",
-    "f = archivo_clean_path.open(\"r\",encoding=\"utf-8\") \n",
-    "reader = csv.reader(f,delimiter=\";\")\n",
+    "h = archivo_clean_path.open(\"r\",encoding=\"utf-8\") \n",
+    "reader = csv.reader(h,delimiter=\";\")\n",
     "header = next(reader)\n",
     "new_list = []\n",
     "dict_aglomerados = {}\n",
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 104,
    "id": "01e6365e",
    "metadata": {},
    "outputs": [],
@@ -433,20 +433,19 @@
     "            \n",
     "                resultados[aglomerado]['total'] += pondera \n",
     "            except:\n",
-    "                continue \n",
+    "                continue\n",
     "    # Calcular porcentaje para cada aglomerado\n",
     "    for aglomerado, valores in sorted(resultados.items()):\n",
     "        \n",
     "        porcentaje_prop = porcentaje(valores[\"propietarios\"], valores[\"total\"])\n",
     "        \n",
     "        print(f\"Aglomerado {aglomerado}: {porcentaje_prop:.2f}% viviendas de propietarios\")\n",
-    "\n",
-    "    return resultados"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 105,
    "id": "d516b09d",
    "metadata": {},
    "outputs": [
@@ -487,47 +486,6 @@
       "Aglomerado 91: 64.33% viviendas de propietarios\n",
       "Aglomerado 93: 66.30% viviendas de propietarios\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'7': {'total': 562118, 'propietarios': 396282},\n",
-       " '32': {'total': 5086368, 'propietarios': 2727576},\n",
-       " '2': {'total': 1391093, 'propietarios': 931359},\n",
-       " '14': {'total': 207600, 'propietarios': 154284},\n",
-       " '15': {'total': 326156, 'propietarios': 254301},\n",
-       " '5': {'total': 774613, 'propietarios': 548934},\n",
-       " '27': {'total': 665636, 'propietarios': 432226},\n",
-       " '18': {'total': 500355, 'propietarios': 429822},\n",
-       " '26': {'total': 329945, 'propietarios': 209439},\n",
-       " '20': {'total': 188444, 'propietarios': 95062},\n",
-       " '29': {'total': 1114213, 'propietarios': 749475},\n",
-       " '33': {'total': 16420008, 'propietarios': 11736813},\n",
-       " '8': {'total': 552523, 'propietarios': 436792},\n",
-       " '23': {'total': 766163, 'propietarios': 513163},\n",
-       " '91': {'total': 226559, 'propietarios': 145741},\n",
-       " '3': {'total': 528468, 'propietarios': 332655},\n",
-       " '4': {'total': 2091663, 'propietarios': 1419938},\n",
-       " '31': {'total': 270947, 'propietarios': 142558},\n",
-       " '34': {'total': 1007078, 'propietarios': 691297},\n",
-       " '12': {'total': 507572, 'propietarios': 353715},\n",
-       " '30': {'total': 208989, 'propietarios': 124573},\n",
-       " '38': {'total': 282144, 'propietarios': 204188},\n",
-       " '17': {'total': 456490, 'propietarios': 300790},\n",
-       " '19': {'total': 436838, 'propietarios': 350269},\n",
-       " '36': {'total': 283238, 'propietarios': 161309},\n",
-       " '93': {'total': 126966, 'propietarios': 84174},\n",
-       " '13': {'total': 2378603, 'propietarios': 1220995},\n",
-       " '22': {'total': 275520, 'propietarios': 229614},\n",
-       " '9': {'total': 325672, 'propietarios': 215241},\n",
-       " '10': {'total': 1398968, 'propietarios': 850105},\n",
-       " '25': {'total': 284351, 'propietarios': 206835},\n",
-       " '6': {'total': 401043, 'propietarios': 288222}}"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -535,13 +493,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "163dabf2",
+   "metadata": {},
+   "source": [
+    "6. Informar el aglomerado con mayor cantidad de viviendas con más de dos ocupantes\n",
+    "y sin baño. Informar también la cantidad de ellas."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "id": "7bb8411e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "id": "15af1a1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f.close()"
+    "h.close()\n",
+    "i.close()"
    ]
   }
  ],
