actividad 4 completada, seccion B, todavida sin terminar

--- a/notebooks/Main_B.ipynb
+++ b/notebooks/Main_B.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "id": "80db1157",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "id": "a59ec020",
    "metadata": {},
    "outputs": [],
@@ -85,6 +85,12 @@
     "    grupos_final = separar_por_trimestre(grupos)\n",
     "    return grupos_final\n",
     "\n",
+    "def agrupar_por_aglomerado (elem, viejo_dict_aglomerados): \n",
+    "    if elem[7] not in viejo_dict_aglomerados: \n",
+    "        viejo_dict_aglomerados[elem[7]] = []\n",
+    "    viejo_dict_aglomerados[elem[7]].append(elem)\n",
+    "    return viejo_dict_aglomerados\n",
+    "\n",
     "\n",
     "def analizar_analfabetismo (dict_ultimos_tri, anio): \n",
     "    alfabetos, analfabetos, desconocido, poblacion = 0, 0, 0, 0 \n",
@@ -110,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "4ea124a0",
    "metadata": {},
    "outputs": [],
@@ -120,17 +126,18 @@
     "i = archivo_clean_path.open(\"r\",encoding=\"utf-8\") \n",
     "reader = csv.reader(i,delimiter=\";\")\n",
     "header = next(reader)\n",
-    "new_list = []\n",
+    "new_list_i = []\n",
+    "aglomerados_individuos = {}\n",
     "for elem in reader:\n",
     "    new_elem = elem[0].split(',')\n",
-    "    new_list.append(new_elem)\n",
-    "    \n",
-    "dict_trimestres = agrupar_por_anio_y_trimestre(new_list)\n"
+    "    new_list_i.append(new_elem)\n",
+    "    aglomerados_individuos = agrupar_por_aglomerado(new_elem,aglomerados_individuos)\n",
+    "trimestres_individuos = agrupar_por_anio_y_trimestre(new_list_i)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "ac15ca5e",
    "metadata": {},
    "outputs": [
@@ -150,7 +157,7 @@
     }
    ],
    "source": [
-    "activ_1(dict_trimestres)"
+    "activ_1(trimestres_individuos)"
    ]
   },
   {
@@ -212,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "id": "7e2c6e15",
    "metadata": {},
    "outputs": [],
@@ -250,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "1d81e323",
    "metadata": {},
    "outputs": [
@@ -265,7 +272,7 @@
    "source": [
     "anio_elegido = input(\"ingrese el año a buscar\")\n",
     "trimestre_elegido = input(\"ingrese el trimestre a buscar\")\n",
-    "porcentaje_ext_univ = activ2(dict_trimestres,anio_elegido,trimestre_elegido)\n",
+    "porcentaje_ext_univ = activ2(trimestres_individuos,anio_elegido,trimestre_elegido)\n",
     "if porcentaje_ext_univ: \n",
     "    print(f'el porcentaje de personas extranjeras universitarias es: {porcentaje_ext_univ:.2f}')"
    ]
@@ -295,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "id": "e63c22ae",
    "metadata": {},
    "outputs": [],
@@ -342,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "3e646b09",
    "metadata": {},
    "outputs": [
@@ -355,7 +362,7 @@
     }
    ],
    "source": [
-    "activ_3(dict_trimestres)"
+    "activ_3(trimestres_individuos)"
    ]
   },
   {
@@ -368,35 +375,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "534e0dd8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def agrupar_por_aglomerado (elem, viejo_dict_aglomerados): \n",
-    "    if elem[7] not in viejo_dict_aglomerados: \n",
-    "        viejo_dict_aglomerados[elem[7]] = []\n",
-    "    viejo_dict_aglomerados[elem[7]].append(elem)\n",
-    "    return viejo_dict_aglomerados"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "f7ee5a89",
    "metadata": {},
    "outputs": [],
    "source": [
     "archivo_clean_path = DATA_CLEAN_PATH / \"usu_clean_hogar.csv\"\n",
     "\n",
-    "h = archivo_clean_path.open(\"r\",encoding=\"utf-8\") \n",
-    "reader = csv.reader(h,delimiter=\";\")\n",
+    "hogares = archivo_clean_path.open(\"r\",encoding=\"utf-8\") \n",
+    "reader = csv.reader(hogares,delimiter=\";\")\n",
     "header = next(reader)\n",
-    "new_list = []\n",
-    "dict_aglomerados = {}\n",
+    "new_list_h = []\n",
+    "aglomerados_hogares = {}\n",
     "for elem in reader:\n",
     "    new_elem = elem[0].split(',')\n",
-    "    dict_aglomerados = agrupar_por_aglomerado(new_elem,dict_aglomerados)\n"
+    "    new_list_h.append(new_elem)\n",
+    "    aglomerados_hogares = agrupar_por_aglomerado(new_elem,aglomerados_hogares)\n",
+    "trimestres_hogares = agrupar_por_anio_y_trimestre(new_list_h)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74da9537",
+   "metadata": {},
+   "source": [
+    "\n",
+    "4.  Ranking de los 5 aglomerados con mayor porcentaje de hogares con dos o más \n",
+    "ocupantes con estudios universitarios o superiores finalizados. Información obtenida \n",
+    "a partir del par de archivos más recientes. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "cd9dc092",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tiene_dos_ocupantes (elem): \n",
+    "    return int(elem[64]) >= 2 \n",
+    "def es_universitario (elem): \n",
+    "    return elem[26] in [\"5\",\"6\"]\n",
+    "\n",
+    "def activ4 (dict_trimestres_i, dict_trimestres_h):\n",
+    "# busca el ultimo archivo de Hogares y Individuos \n",
+    "\n",
+    "    ## busca el año mas reciente de cada uno de los diccionarios (divididos por triemstre)\n",
+    "    max_anio_i = max(dict_trimestres_i.keys())\n",
+    "\n",
+    "    max_anio_h = max(dict_trimestres_h.keys())\n",
+    "\n",
+    "    ## busca el trimestre mas reciente para cada uno de los diccionarios (en el año maximo obtenido anteriormmnte)\n",
+    "    max_tri_i = max(dict_trimestres_i[max_anio_i].keys())\n",
+    "\n",
+    "    max_tri_h = max(dict_trimestres_h[max_anio_h].keys())\n",
+    "\n",
+    "    ## guarda los hogares e individuos encuestados del periodo mas reciente (trimestre y año tomados anteriormente)\n",
+    "    ultimos_hogares = dict_trimestres_h[max_anio_h][max_tri_h]\n",
+    "\n",
+    "    ultimos_individuos  = dict_trimestres_i[max_anio_i][max_tri_i]\n",
+    "    \n",
+    "    ## declarando listas y dicts\n",
+    "    hogares_CODUSU, individuos_CODUSU, hogares, individuos = [], [], [], [] \n",
+    "\n",
+    "    poblacion_total_aglomerado, encuestas_finales, porcentajes_finales = {}, {}, {}\n",
+    "\n",
+    "# busca dentro de los hogares e individuos mas recientes si cumplen con las condiciones\n",
+    "\n",
+    "    ## guarda los hogares que cumplen con la condicion y su respectivo CODUSU \n",
+    "    for elem in ultimos_hogares: \n",
+    "        if not tiene_dos_ocupantes(elem):\n",
+    "            continue\n",
+    "        hogares.append(elem)\n",
+    "        hogares_CODUSU.append(elem[0]) \n",
+    "\n",
+    "    ## guarda los individuos que cumplen con la condicion y su respectivo CODUSU \n",
+    "    for elem in ultimos_individuos:\n",
+    "        if not es_universitario(elem): \n",
+    "            continue \n",
+    "        individuos.append(elem)\n",
+    "        individuos_CODUSU.append(elem[0])\n",
+    "\n",
+    "# busca dentro de los hogares e intenta encontrar los que cumplen las condiciones de individuos y hogares\n",
+    "\n",
+    "    for elem in hogares:\n",
+    "    \n",
+    "    ## añade lo que pondera cada aglomerado en un aglomerado_pondera\n",
+    "        if elem[7] not in poblacion_total_aglomerado:\n",
+    "            poblacion_total_aglomerado[elem[7]] = 0\n",
+    "\n",
+    "        poblacion_total_aglomerado[elem[7]] += int(elem[8])\n",
+    "\n",
+    "    ## si no cumple la condicion de individuos se ignora ya cumple con la condicion de hogares, por ende si cumple esta cumple con ambas\n",
+    "        if elem[0] not in individuos_CODUSU: \n",
+    "            continue \n",
+    "\n",
+    "    ## añade las encuestas finales( que cumplen con ambas condiciones) a encuestas_finales, separado por aglomerado \n",
+    "        if elem[7] not in encuestas_finales:\n",
+    "            encuestas_finales[elem[7]] = []\n",
+    "\n",
+    "        encuestas_finales[elem[7]].append(elem)\n",
+    "\n",
+    "    for aglomerado in encuestas_finales:\n",
+    "    ## crea un diccionario dividido por aglomerado con lo que ponderan las encuestas finales \n",
+    "        poblacion_final_aglomerado = 0\n",
+    "\n",
+    "        if aglomerado not in porcentajes_finales:\n",
+    "            porcentajes_finales[aglomerado] = 0 \n",
+    "\n",
+    "        for elem in encuestas_finales[aglomerado]: \n",
+    "            poblacion_final_aglomerado += int(elem[8])\n",
+    "        \n",
+    "    ## porcentaje de hogares que cumplen con las condiciones, dividido por aglomerado \n",
+    "        porcentajes_finales[aglomerado] = porcentaje(poblacion_final_aglomerado, poblacion_total_aglomerado[aglomerado])\n",
+    "    \n",
+    "\n",
+    "    ## encuentra el aglomerado con el mayor porcentaje \n",
+    "    max_porcentaje = 0 \n",
+    "    max_aglomerado = 0 \n",
+    "    for aglomerado in porcentajes_finales: \n",
+    "        if porcentajes_finales[aglomerado] > max_porcentaje:\n",
+    "            max_aglomerado = aglomerado\n",
+    "            max_porcentaje = porcentajes_finales[aglomerado]\n",
+    "        \n",
+    "    print(f'el aglomerado con mayor porcentaje fue el: {max_aglomerado} con un porcentaje de {max_porcentaje:.2f}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc004fb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el aglomerado con mayor porcentaje fue el: 32 con un porcentaje de 72.42\n"
+     ]
+    }
+   ],
+   "source": [
+    "activ4(trimestres_individuos,trimestres_hogares)"
    ]
   },
   {
@@ -410,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 14,
    "id": "01e6365e",
    "metadata": {},
    "outputs": [],
@@ -445,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "d516b09d",
    "metadata": {},
    "outputs": [
@@ -489,7 +611,7 @@
     }
    ],
    "source": [
-    "porcentaje_propietarios_por_aglomerado(dict_aglomerados)"
+    "porcentaje_propietarios_por_aglomerado(aglomerados_hogares)"
    ]
   },
   {
@@ -511,12 +633,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "15af1a1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "h.close()\n",
+    "hogares.close()\n",
     "i.close()"
    ]
   }
