--- a/notebooks/Main_B.ipynb
+++ b/notebooks/Main_B.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "id": "80db1157",
    "metadata": {},
    "outputs": [],
@@ -12,6 +12,110 @@
     "sys.path.append(\"..\")\n",
     "from src.utils.constantes import DATA_CLEAN_PATH\n",
     "from src.utils.funciones import porcentaje\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "62953d7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def separar_por_trimestre(dict_anios): \n",
+    "    dict_final = {}\n",
+    "    for anio in dict_anios:\n",
+    "        dict_temporal = {}\n",
+    "        \n",
+    "        for filas in dict_anios[anio]:\n",
+    "            trimestre = filas[2]\n",
+    "            if trimestre not in dict_temporal: \n",
+    "                dict_temporal[trimestre] = []\n",
+    "            dict_temporal[trimestre].append(filas)\n",
+    "\n",
+    "        dict_final[anio] = dict_temporal\n",
+    "    return dict_final\n",
+    "\n",
+    "\n",
+    "def agrupar_por_anio_y_trimestre(filas, col_anio=1):\n",
+    "    grupos = {}\n",
+    "    for fila in filas:\n",
+    "        anio = fila[col_anio]\n",
+    "        if anio not in grupos:\n",
+    "            grupos[anio] = []\n",
+    "        grupos[anio].append(fila)\n",
+    "    grupos_final = separar_por_trimestre(grupos)\n",
+    "    return grupos_final\n",
+    "\n",
+    "def agrupar_por_aglomerado (new_list_i): \n",
+    "    viejo_dict_aglomerados = {}\n",
+    "    for elem in new_list_i:\n",
+    "        if elem[7] not in viejo_dict_aglomerados: \n",
+    "            viejo_dict_aglomerados[elem[7]] = []\n",
+    "        viejo_dict_aglomerados[elem[7]].append(elem)\n",
+    "    return viejo_dict_aglomerados\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c72085e",
+   "metadata": {},
+   "source": [
+    "Abriendo archivo individuos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "ca5fb30b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "archivo_clean_path = DATA_CLEAN_PATH / \"usu_clean_individual.csv\"\n",
+    "\n",
+    "archivo_individuos = archivo_clean_path.open(\"r\",encoding=\"utf-8\") \n",
+    "reader = csv.reader(archivo_individuos,delimiter=\";\")\n",
+    "header = next(reader)\n",
+    "\n",
+    "new_list_i = []\n",
+    "\n",
+    "for elem in reader:\n",
+    "    new_elem = elem[0].split(',')\n",
+    "    new_list_i.append(new_elem)\n",
+    "\n",
+    "aglomerados_individuos = agrupar_por_aglomerado(new_list_i)\n",
+    "trimestres_individuos = agrupar_por_anio_y_trimestre(new_list_i)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "357f0af9",
+   "metadata": {},
+   "source": [
+    "Abriendo archivo hogares\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "5da67db5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "archivo_clean_path = DATA_CLEAN_PATH / \"usu_clean_hogar.csv\"\n",
+    "\n",
+    "archivo_hogares = archivo_clean_path.open(\"r\",encoding=\"utf-8\") \n",
+    "reader = csv.reader(archivo_hogares,delimiter=\";\")\n",
+    "header = next(reader)\n",
+    "\n",
+    "new_list_h = []\n",
+    "\n",
+    "for elem in reader:\n",
+    "    new_elem = elem[0].split(',')\n",
+    "    new_list_h.append(new_elem)\n",
+    "\n",
+    "aglomerados_hogares = agrupar_por_aglomerado(new_list_h)\n",
+    "trimestres_hogares = agrupar_por_anio_y_trimestre(new_list_h)\n",
+    "\n"
    ]
   },
   {
@@ -55,43 +159,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
+   "id": "a981f232",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def contar_alfabetismo(filas):\n",
+    "    \"\"\"\n",
+    "    Recorre las filas y calcula los totales ponderados de:\n",
+    "    alfabetos, analfabetos, casos desconocidos y población mayor a 6 años.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    alfabetos = analfabetos = desconocido = poblacion = 0\n",
+    "\n",
+    "    for elem in filas:\n",
+    "        pondera = int(elem[9])\n",
+    "        edad = int(elem[13])\n",
+    "        if edad >= 6:\n",
+    "            poblacion += pondera\n",
+    "            if elem[16] == \"1\":\n",
+    "                alfabetos += pondera\n",
+    "            elif elem[16] == \"2\":\n",
+    "                analfabetos += pondera\n",
+    "            else:\n",
+    "                desconocido += pondera\n",
+    "    return alfabetos, analfabetos, desconocido, poblacion\n",
+    "\n",
+    "def calcular_porcentajes(alfabetos, analfabetos, desconocido, poblacion):\n",
+    "    \"\"\"\n",
+    "    Calcula los porcentajes de alfabetos, analfabetos y desconocidos sobre la población total.\n",
+    "    \"\"\"\n",
+    "    return (\n",
+    "        porcentaje(alfabetos, poblacion),\n",
+    "        porcentaje(analfabetos, poblacion),\n",
+    "        porcentaje(desconocido, poblacion),\n",
+    "    )\n",
+    "\n",
+    "def analizar_analfabetismo(dict_anio_trimestre):\n",
+    "    \"\"\"\n",
+    "    Para cada año, calcula e imprime el último trimestre disponible y los\n",
+    "    porcentajes de alfabetos, analfabetos y casos desconocidos en población > 6 años.\n",
+    "    \"\"\"\n",
+    "    for anio in dict_anio_trimestre:\n",
+    "        trimestre = obtener_ultimo_trimestre(dict_anio_trimestre, anio)\n",
+    "        filas = dict_anio_trimestre[anio][trimestre]\n",
+    "        alfabetos, analfabetos, desconocido, poblacion = contar_alfabetismo(filas)\n",
+    "        por_alfa, por_ana, por_desc = calcular_porcentajes(alfabetos, analfabetos, desconocido, poblacion)\n",
+    "\n",
+    "        print(f\"Año {anio}, Trimestre {trimestre}\")\n",
+    "        print(f\"  - Alfabetismo: {por_alfa:.2f}%\")\n",
+    "        print(f\"  - Analfabetismo: {por_ana:.2f}%\")\n",
+    "        print(f\"  - Desconocido: {por_desc:.2f}%\\n\")\n",
+    "\n",
+    "def actividad_1(lista_filas_individual):\n",
+    "    dict_anio_trimestre_individual = agrupar_por_anio_y_trimestre(lista_filas_individual)\n",
+    "    analizar_analfabetismo(dict_anio_trimestre_individual)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "id": "a59ec020",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def separar_por_trimestre(dict_anios): \n",
-    "    dict_final = {}\n",
-    "    for anio in dict_anios:\n",
-    "        dict_temporal = {}\n",
-    "        \n",
-    "        for filas in dict_anios[anio]:\n",
-    "            trimestre = filas[2]\n",
-    "            if trimestre not in dict_temporal: \n",
-    "                dict_temporal[trimestre] = []\n",
-    "            dict_temporal[trimestre].append(filas)\n",
-    "\n",
-    "        dict_final[anio] = dict_temporal\n",
-    "    return dict_final\n",
-    "\n",
-    "\n",
-    "def agrupar_por_anio_y_trimestre(filas, col_anio=1):\n",
-    "    grupos = {}\n",
-    "    for fila in filas:\n",
-    "        anio = fila[col_anio]\n",
-    "        if anio not in grupos:\n",
-    "            grupos[anio] = []\n",
-    "        grupos[anio].append(fila)\n",
-    "    grupos_final = separar_por_trimestre(grupos)\n",
-    "    return grupos_final\n",
-    "\n",
-    "def agrupar_por_aglomerado (elem, viejo_dict_aglomerados): \n",
-    "    if elem[7] not in viejo_dict_aglomerados: \n",
-    "        viejo_dict_aglomerados[elem[7]] = []\n",
-    "    viejo_dict_aglomerados[elem[7]].append(elem)\n",
-    "    return viejo_dict_aglomerados\n",
-    "\n",
-    "\n",
     "def analizar_analfabetismo (dict_ultimos_tri, anio): \n",
     "    alfabetos, analfabetos, desconocido, poblacion = 0, 0, 0, 0 \n",
     "    max_1 = max(dict_ultimos_tri[anio].keys())\n",
@@ -116,28 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4ea124a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "archivo_clean_path = DATA_CLEAN_PATH / \"usu_clean_individual.csv\"\n",
-    "\n",
-    "i = archivo_clean_path.open(\"r\",encoding=\"utf-8\") \n",
-    "reader = csv.reader(i,delimiter=\";\")\n",
-    "header = next(reader)\n",
-    "new_list_i = []\n",
-    "aglomerados_individuos = {}\n",
-    "for elem in reader:\n",
-    "    new_elem = elem[0].split(',')\n",
-    "    new_list_i.append(new_elem)\n",
-    "    aglomerados_individuos = agrupar_por_aglomerado(new_elem,aglomerados_individuos)\n",
-    "trimestres_individuos = agrupar_por_anio_y_trimestre(new_list_i)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "ac15ca5e",
    "metadata": {},
    "outputs": [
@@ -219,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 66,
    "id": "7e2c6e15",
    "metadata": {},
    "outputs": [],
@@ -257,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "1d81e323",
    "metadata": {},
    "outputs": [
@@ -265,7 +375,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valores no encontrados en el diccionario\n"
+      "el porcentaje de personas extranjeras universitarias es: 0.53\n"
      ]
     }
    ],
@@ -302,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 68,
    "id": "e63c22ae",
    "metadata": {},
    "outputs": [],
@@ -349,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "3e646b09",
    "metadata": {},
    "outputs": [
@@ -374,28 +484,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f7ee5a89",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "archivo_clean_path = DATA_CLEAN_PATH / \"usu_clean_hogar.csv\"\n",
-    "\n",
-    "hogares = archivo_clean_path.open(\"r\",encoding=\"utf-8\") \n",
-    "reader = csv.reader(hogares,delimiter=\";\")\n",
-    "header = next(reader)\n",
-    "new_list_h = []\n",
-    "aglomerados_hogares = {}\n",
-    "for elem in reader:\n",
-    "    new_elem = elem[0].split(',')\n",
-    "    new_list_h.append(new_elem)\n",
-    "    aglomerados_hogares = agrupar_por_aglomerado(new_elem,aglomerados_hogares)\n",
-    "trimestres_hogares = agrupar_por_anio_y_trimestre(new_list_h)\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "74da9537",
    "metadata": {},
@@ -408,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 70,
    "id": "cd9dc092",
    "metadata": {},
    "outputs": [],
@@ -505,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "fc004fb6",
    "metadata": {},
    "outputs": [
@@ -532,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 72,
    "id": "01e6365e",
    "metadata": {},
    "outputs": [],
@@ -567,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "d516b09d",
    "metadata": {},
    "outputs": [
@@ -633,13 +721,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "15af1a1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hogares.close()\n",
-    "i.close()"
+    "archivo_hogares.close()\n",
+    "archivo_individuos.close()"
    ]
   }
  ],
