--- a/notebooks/Main_B_v2.ipynb
+++ b/notebooks/Main_B_v2.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "80db1157",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# LIBRERIRAS\n",
+    "# LIBRERIAS\n",
     "import sys \n",
     "import csv\n",
     "sys.path.append(\"..\")\n",
