progresos seccion B, punto 1 , 2 y organizando

--- a/notebooks/Main_B.ipynb
+++ b/notebooks/Main_B.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 102,
    "id": "80db1157",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 103,
    "id": "62953d7c",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,13 @@
     "        if elem[7] not in viejo_dict_aglomerados: \n",
     "            viejo_dict_aglomerados[elem[7]] = []\n",
     "        viejo_dict_aglomerados[elem[7]].append(elem)\n",
-    "    return viejo_dict_aglomerados\n"
+    "    return viejo_dict_aglomerados\n",
+    "\n",
+    "def obtener_ultimo_archivo (dict_trimestres): \n",
+    "    max_anio = max(dict_trimestres.keys())\n",
+    "    max_trimestre = max(dict_trimestres[max_anio].keys())\n",
+    "    return dict_trimestres[max_anio][max_trimestre]\n",
+    "    \n"
    ]
   },
   {
@@ -65,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 104,
    "id": "ca5fb30b",
    "metadata": {},
    "outputs": [],
@@ -83,7 +89,8 @@
     "    new_list_i.append(new_elem)\n",
     "\n",
     "aglomerados_individuos = agrupar_por_aglomerado(new_list_i)\n",
-    "trimestres_individuos = agrupar_por_anio_y_trimestre(new_list_i)\n"
+    "años_trimestres_individuos = agrupar_por_anio_y_trimestre(new_list_i)\n",
+    "ultimos_individuos = obtener_ultimo_archivo(años_trimestres_individuos)\n"
    ]
   },
   {
@@ -96,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 105,
    "id": "5da67db5",
    "metadata": {},
    "outputs": [],
@@ -114,8 +121,8 @@
     "    new_list_h.append(new_elem)\n",
     "\n",
     "aglomerados_hogares = agrupar_por_aglomerado(new_list_h)\n",
-    "trimestres_hogares = agrupar_por_anio_y_trimestre(new_list_h)\n",
-    "\n"
+    "años_trimestres_hogares = agrupar_por_anio_y_trimestre(new_list_h)\n",
+    "ultimos_hogares = obtener_ultimo_archivo(años_trimestres_hogares)\n"
    ]
   },
   {
@@ -159,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 106,
    "id": "a981f232",
    "metadata": {},
    "outputs": [],
@@ -173,7 +180,7 @@
     "    alfabetos = analfabetos = desconocido = poblacion = 0\n",
     "\n",
     "    for elem in filas:\n",
-    "        pondera = int(elem[9])\n",
+    "        pondera = int(elem[9]) # es elem[8] no 9, pq es lista y empiezan en 0\n",
     "        edad = int(elem[13])\n",
     "        if edad >= 6:\n",
     "            poblacion += pondera\n",
@@ -195,6 +202,10 @@
     "        porcentaje(desconocido, poblacion),\n",
     "    )\n",
     "\n",
+    "def obtener_ultimo_trimestre(dict_anio_trimestre,anio):\n",
+    "    return max(dict_anio_trimestre[anio].keys())\n",
+    "\n",
+    "\n",
     "def analizar_analfabetismo(dict_anio_trimestre):\n",
     "    \"\"\"\n",
     "    Para cada año, calcula e imprime el último trimestre disponible y los\n",
@@ -211,63 +222,36 @@
     "        print(f\"  - Analfabetismo: {por_ana:.2f}%\")\n",
     "        print(f\"  - Desconocido: {por_desc:.2f}%\\n\")\n",
     "\n",
-    "def actividad_1(lista_filas_individual):\n",
-    "    dict_anio_trimestre_individual = agrupar_por_anio_y_trimestre(lista_filas_individual)\n",
-    "    analizar_analfabetismo(dict_anio_trimestre_individual)"
+    "def actividad_1(individuos):\n",
+    "    analizar_analfabetismo(individuos)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "a59ec020",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def analizar_analfabetismo (dict_ultimos_tri, anio): \n",
-    "    alfabetos, analfabetos, desconocido, poblacion = 0, 0, 0, 0 \n",
-    "    max_1 = max(dict_ultimos_tri[anio].keys())\n",
-    "    for elem in dict_ultimos_tri[anio][max_1]:\n",
-    "        pondera = int(elem[8])\n",
-    "        poblacion += pondera\n",
-    "        if int(elem[13]) <= 6: \n",
-    "            continue\n",
-    "        if elem[16] == \"1\": \n",
-    "            alfabetos += pondera\n",
-    "        elif elem[16] == \"2\": \n",
-    "            analfabetos += pondera\n",
-    "        else:\n",
-    "            desconocido += pondera\n",
-    "    return porcentaje(alfabetos,poblacion), porcentaje(analfabetos,poblacion), porcentaje(desconocido,poblacion)\n",
-    "\n",
-    "def activ_1(dict_ultimos_tri):\n",
-    "    for anios in dict_ultimos_tri: \n",
-    "        por_alfa, por_ana , por_desc = analizar_analfabetismo(dict_ultimos_tri,anios)\n",
-    "        print(f'en {anios} \\nel porcentaje de Alfabetismo fue: {por_alfa:.2f}% \\nel porcentaje de Analfabetismo fue: {por_ana:.2f}% \\nel porcentaje de desconocidos fue: {por_desc:.2f}%')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "ac15ca5e",
+   "execution_count": 107,
+   "id": "229ce836",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "en 2024 \n",
-      "el porcentaje de Alfabetismo fue: 91.91% \n",
-      "el porcentaje de Analfabetismo fue: 0.91% \n",
-      "el porcentaje de desconocidos fue: 0.02%\n",
-      "en 2023 \n",
-      "el porcentaje de Alfabetismo fue: 91.44% \n",
-      "el porcentaje de Analfabetismo fue: 0.89% \n",
-      "el porcentaje de desconocidos fue: 0.03%\n"
+      "Año 2024, Trimestre 2\n",
+      "  - Alfabetismo: 98.57%\n",
+      "  - Analfabetismo: 1.39%\n",
+      "  - Desconocido: 0.04%\n",
+      "\n",
+      "Año 2023, Trimestre 4\n",
+      "  - Alfabetismo: 98.47%\n",
+      "  - Analfabetismo: 1.46%\n",
+      "  - Desconocido: 0.07%\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "activ_1(trimestres_individuos)"
+    "actividad_1(años_trimestres_individuos)"
    ]
   },
   {
@@ -329,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 108,
    "id": "7e2c6e15",
    "metadata": {},
    "outputs": [],
@@ -358,6 +342,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1eda1b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def contar_extranjeros_universitarios(filas):\n",
+    "    # Calcula la cantidad de extranjeros, universitarios y ambos combinados\n",
+    "    total_extranjeros = total_universitarios = total_universitarios_extranjeros = 0\n",
+    "\n",
+    "    for elem in filas:\n",
+    "        pondera = int(elem[9])\n",
+    "        ch12 = elem[19]  # nivel educativo\n",
+    "        ch15 = elem[22]  # lugar de nacimiento\n",
+    "\n",
+    "        if es_extranjero(ch15):\n",
+    "            total_extranjeros += pondera\n",
+    "            if es_universitario(ch12):\n",
+    "                total_universitarios_extranjeros += pondera\n",
+    "\n",
+    "        if es_universitario(ch12):\n",
+    "            total_universitarios += pondera\n",
+    "\n",
+    "    return total_extranjeros, total_universitarios, total_universitarios_extranjeros"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "087e6470",
    "metadata": {},
@@ -367,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 109,
    "id": "1d81e323",
    "metadata": {},
    "outputs": [
@@ -382,7 +393,7 @@
    "source": [
     "anio_elegido = input(\"ingrese el año a buscar\")\n",
     "trimestre_elegido = input(\"ingrese el trimestre a buscar\")\n",
-    "porcentaje_ext_univ = activ2(trimestres_individuos,anio_elegido,trimestre_elegido)\n",
+    "porcentaje_ext_univ = activ2(años_trimestres_individuos,anio_elegido,trimestre_elegido)\n",
     "if porcentaje_ext_univ: \n",
     "    print(f'el porcentaje de personas extranjeras universitarias es: {porcentaje_ext_univ:.2f}')"
    ]
@@ -412,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 110,
    "id": "e63c22ae",
    "metadata": {},
    "outputs": [],
@@ -459,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 111,
    "id": "3e646b09",
    "metadata": {},
    "outputs": [
@@ -472,7 +483,7 @@
     }
    ],
    "source": [
-    "activ_3(trimestres_individuos)"
+    "activ_3(años_trimestres_individuos)"
    ]
   },
   {
@@ -496,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 112,
    "id": "cd9dc092",
    "metadata": {},
    "outputs": [],
@@ -593,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 113,
    "id": "fc004fb6",
    "metadata": {},
    "outputs": [
@@ -606,7 +617,7 @@
     }
    ],
    "source": [
-    "activ4(trimestres_individuos,trimestres_hogares)"
+    "activ4(años_trimestres_individuos,años_trimestres_hogares)"
    ]
   },
   {
@@ -620,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 114,
    "id": "01e6365e",
    "metadata": {},
    "outputs": [],
@@ -655,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 115,
    "id": "d516b09d",
    "metadata": {},
    "outputs": [
@@ -721,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 116,
    "id": "15af1a1d",
    "metadata": {},
    "outputs": [],
