--- a/notebooks/Main_B_v2.ipynb
+++ b/notebooks/Main_B_v2.ipynb
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a59ec020",
    "metadata": {},
    "outputs": [],
@@ -715,7 +715,7 @@
     "    alfabetos = analfabetos = desconocido = poblacion = 0\n",
     "\n",
     "    for elem in filas:\n",
-    "        pondera = int(elem[9])\n",
+    "        pondera = int(elem[9]) # es elem[8] no 9, pq es lista y empiezan en 0\n",
     "        edad = int(elem[13])\n",
     "        if edad >= 6:\n",
     "            poblacion += pondera\n",
